i915: intel_display_irq Intel TigerLake-H GT1/i7-11850H spamming large volumes of "[drm] *ERROR* Unexpected DE Misc interrupt"
I am using a i7-11850H processor (TigerLake) with integrated graphics on linux using the latest kernel built using the drm tree. Even before testing the latest upstream, I have been noticing that the IRQ handler keeps spamming "Unexpected DE Misc interrupt". I have modified the IRQ context a bit to provide more information about the reason why this is happening, including what IIR register is involved. This is with a Dell Precision 5760 0A5E SKU device.
I have provided the relevant kernel log messages from this modification as both an attachment and inlined (since the size of the relevant context is small). I have attached a patch file to help indicate what these logged values refer to as well.
[ 191.578923] master_ctl: 0x80400000
[ 191.578926] Entered GEN8_DE_EDP_PSR context with DISPLAY_VER: 12
[ 191.578927] Transcoder: 0
[ 191.578927] iir_reg: 0x60818
[ 191.578928] old reg value: 0, new reg value: 0
[ 191.578931] i915 0000:00:02.0: [drm] *ERROR* Unexpected DE Misc interrupt: 0x80000
I am checked out at commit 2ba446f82142d0d42fc5ea7bea7af581d33a7939 from git://anongit.freedesktop.org/drm/drm.